<resources>
    <string name="app_name">Whatsapp2</string>
    <string name="from">from</string>
    <string name="facebook">FACEBOOK</string>
    <string name="search">Search</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="linked_devices">Linked Devices</string>
    <string name="stared_message">Stared Message</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_status">My Status</string>
    <string name="tap_to_add_status_update">Tap To add Status Update</string>
    <string name="recent_updates">Recent updates</string>
    <string name="_26_minutes_ago">26 minutes ago</string>
    <string name="robert_downey">Robert Downey</string>
    <string name="status_privacy">Status Privacy</string>
    <string name="clear_call_log">Clear Call Log</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="type_a_message">Type a Message</string>
</resources>